- Added some tests - Updated models - More endpoints - Results pattern - Better handling of status codes through result pattern

--- a/FestivalShoppingApi.Business/FestivalShoppingApi.Business.csproj
+++ b/FestivalShoppingApi.Business/FestivalShoppingApi.Business.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\FestivalShoppingApi.Common\FestivalShoppingApi.Common.csproj" />
       <ProjectReference Include="..\FestivalShoppingApi.Data\FestivalShoppingApi.Data.csproj" />
     </ItemGroup>
 
