- Containerisation - Integration Test Folder - Health Check

--- a/FestivalShoppingApi.Test/FestivalShoppingApi.Test.csproj
+++ b/FestivalShoppingApi.Test/FestivalShoppingApi.Test.csproj
@@ -27,4 +27,8 @@
       <ProjectReference Include="..\FestivalShoppingApi.Data\FestivalShoppingApi.Data.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="IntegrationTests\" />
+    </ItemGroup>
+
 </Project>
