Update Docker Files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,29 @@
-version: '3.9'
-
 services:
   festival-api:
     build:
       context: .
       dockerfile: FestivalShoppingApi.Dockerfile
     container_name: festival_api
-    ports:
-      - "5000:8080"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.backend.rule=Host(`seanofthe.dev`) && PathPrefix(`/festival-shopping-api`)"
+      - "traefik.http.routers.backend.entrypoints=websecure"
+      - "traefik.http.routers.backend.tls=true"
+      - "traefik.http.routers.backend.tls.certresolver=myresolver"
+      - "traefik.http.services.backend.loadbalancer.server.port=8080"
     environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-      - ConnectionStrings__DefaultConnection=Data Source=/app/FestivalShopping.db
+      - ConnectionStrings__DefaultConnection=Data Source=/data/FestivalShopping.db
     volumes:
-      - ./sqlite:/app/sqlite
+      - festival-data:/data
+    networks:
+      - traefik-network
+
+networks:
+  traefik-network:
+    external: true
+  app-network:
+    driver: bridge
+    
+volumes:
+  festival-data:
+    driver: local
